Fixes, some rework.

--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -13,11 +13,11 @@
           <div class="category_title">
             Videos
           </div>
-          <div class="items">
+          <ul class="items">
             <% @videos.each do |post| %>
                 <%= render "posts/small_preview", :post => post %>
             <% end %>
-          </div>
+          </ul>
           <div class="view_more_link clear_both">
             <%= link_to "See all videos", @parent.is_a?(College) ? college_videos_path(@parent) : conference_videos_path(@parent) %>
           </div>
@@ -28,9 +28,11 @@
           <div class="category_title">
             Photos
           </div>
-          <% @photos.each do |post| %>
-              <%= render "posts/small_preview", :post => post %>
-          <% end %>
+          <ul class="items">
+            <% @photos.each do |post| %>
+                <%= render "posts/small_preview", :post => post %>
+            <% end %>
+          </ul>
           <div class="view_more_link clear_both">
             <%= link_to "See all photos", @parent.is_a?(College) ? college_photos_path(@parent) : conference_photos_path(@parent) %>
           </div>
@@ -42,14 +44,14 @@
       <div class="category_title">
         News
       </div>
-      <div class="items">
+      <ul class="items news">
         <% @news.each do |post| %>
             <%= render "posts/news_preview", :post => post %>
         <% end %>
         <div class="view_more_link clear_both">
           <%= link_to "See all news", @parent.is_a?(College) ? college_news_index_path(@parent) : conference_news_index_path(@parent) %>
         </div>
-      </div>
+      </ul>
     </div>
   </div>
 
