--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="title_wrapper clearfix">
     <div class="cont_title"><h1>Edit comment</h1></div>
   </div>
-  <div class="form_container create_post">
+  <div class="form_container post_form">
     <div class="form_wrapper">
       <%= form_for @comment do |f| %>
         <div class="table_padding">
