--- a/app/views/conferences/_stats.html.erb
+++ b/app/views/conferences/_stats.html.erb
@@ -5,8 +5,9 @@
     <div class="redcount">R</div>
   </div>
 
-  <% conference.colleges.limit(limit).order('smacks_count desc').each do |college| %>
-      <div class="cell clearfix"> <%# FIXME add noborder class to the last item %>
+  <% conferences = conference.colleges.limit(limit).order('smacks_count desc') %>
+  <% conferences.each_with_index do |college, i| %>
+    <div class="cell clearfix <% if i == conferences.size-1 %>noborder<% end %>">
         <div class="black colname"><%= link_to college.abbrev, college %></div>
         <div class="green smcount"><%= college.smacks_count %></div>
         <div class="red redcount"><%= college.redemptions_count %></div>
