--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,88 +1,40 @@
-<% content_for :head do %>
-    <%= stylesheet_link_tag 'contacts' %>
-<% end %>
-
-<!-- Not a DRY to use in each view "content". TO-DO move it to the layout -->
 <div class="content contacts">
-
-  <div class="content_title"><h1>Contacts
-    <% if @group_name != "All" %>(<%= @group_name %>)
-    <% end %>  </h1></div>
+  <div class="content_title"><h1>Contacts<%= " (#{@group.name})" if @group.name != "All" %></h1></div>
   <div class="content_actions">
     <ul>
-      <li class="dark_button"><%= link_to 'New Contact', new_contact_path %></li>
+      <li class="dark_button"><%= link_to 'New Contact', new_contact_path, :remote => true %></li>
       <li class="dark_button"><%= render :partial => 'contacts/import_form' -%></li>
     </ul>
   </div>
-  <!-- TO-DO move this js code to index.js.erb. I tried, but seems that UJS is not working. I recomend to update rails -->
-  <script type="text/javascript">
-      $(document).ready(function() {
-          $('.image_load').hide();
-
-          $('#rowclick1 tr').click(function(event) {
-
-              if (event.target.type !== 'checkbox') {
-                  $(':checkbox', this).trigger('click');
-              }
-          });
-
-          $('input.select_all').click(function (event) {
-              $("#contact_list").find(':checkbox').attr('checked', this.checked);
-          });
-
-          $('#delete_selected').click(function(event) {
-              show_img_selected();
-              $.ajax({
-                  type: "POST",
-                  url: "<%= delete_emails_contacts_path() -%>",
-                  data: $("#contact_list input").serialize()
-              });
-          });
-          $('#remove_selected').click(function(event) {
-              show_img_selected();
-              $.ajax({
-                  type: "POST",
-                  url: "<%= remove_emails_from_group_contacts_path() -%>",
-                  data: $("#contact_list input").serialize()
-              });
-
-          });
-
-      });
-
-      function remove_selected() {
-          var ids = $(".chk_box:checked")
-          for (var i = 0; i < ids.length; i++) {
-              var id = "#" + ids[i].value + "";
-              $(id).remove()
-          }
-
-      }
-
-      function show_img_selected() {
-          var ids = $(".chk_box:checked")
-          for (var i = 0; i < ids.length; i++) {
-              var id = "#img" + ids[i].value;
-              $(id).show();
-          }
-
-      }
-  </script>
   <div class="content_container">
-    <div class="content_category">
+    <div class="contacts_items_per_page clearfix">
+      <ul>
+        <%=items_per_page([200,100,50,25])%>
+      </ul>
+      <div class="contacts_items_per_page_text"><span>|</span> Items per page:</div>
+    </div>
+    <div class="content_categories">
       <div class="contacts_table">
         <ul class="contact_groups">
-          <li<%= ' class="active"'.html_safe if @group_name == 'All' %>>
-            <%= link_to_unless(@group_name == 'All', 'All', contacts_path) do %>
+          <li<%= ' class="active"'.html_safe if @group.name == 'All' %>>
+            <%= link_to_unless(@group.name == 'All', 'All', contacts_path(:per => params[:per])) do %>
                 <span>All</span>
             <% end %>
           </li>
           <% @contact_groups.each do |contact_group| %>
-              <li<%= ' class="active"'.html_safe if @group_name == contact_group.name %>>
-                <%= link_to_unless_current(contact_group.name, contacts_path(:group_id=>contact_group.id)) do %>
+          <% if @group.name == contact_group.name%>
+              <li class="active">
+                <%= link_to_unless_current(contact_group.name, contacts_path(:group_id=>contact_group.id, :page => params[:page], :per => params[:per])) do %>
                     <span><%= contact_group.name %></span>
                 <% end %>
               </li>
+          <% else %>
+              <li>
+                <%= link_to_unless_current(contact_group.name, contacts_path(:group_id=>contact_group.id, :per => params[:per])) do %>
+                    <span><%= contact_group.name %></span>
+                <% end %>
+              </li>
+          <% end %>
           <% end %>
         </ul>
         <div class="table_content">
@@ -97,23 +49,12 @@
           </div>
           <div id="contact_list">
             <table id="rowclick1">
-              <% @contacts.each do |contact| %>
-                  <tr id="<%= contact.id %>">
-                    <td class="table_preloader">
-                      <span class="image_load" id="img<%= contact.id %>"><%= image_tag('ajax-cb-loader.gif') %></span>
-                    </td>
-                    <td class="table_check">
-                      <input class="chk_box" type="checkbox" value="<%= contact.id %>" name="cb[]"></input></td>
-                    <td><%= contact.name %></td>
-                    <td><%= contact.email %></td>
-                    <td class="row_actions"><%= link_to 'Edit', edit_contact_path(contact), :class => "table_button black" %></td>
-                  </tr>
-              <% end %>
+              <%= render :partial => "contacts" %>
             </table>
           </div>
-          <input type="hidden" name="groupname" value="<%= @group_name %>"/>
+          <input type="hidden" name="groupname" value="<%= @group.name %>"/>
         </div>
-        <div class="add_edit_group"><%= link_to("Edit / Add groups", contact_groups_path(@contact)) %></div>
+        <div class="add_edit_group"><%= link_to 'Edit / Add groups', contact_groups_path, :remote => true %></div>
       </div>
       <div class="pagination">
         <%= will_paginate @contacts %>
