--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="title_box">
     <h2>FILL IN THE FOLLOWING TO EDIT A SMACK</h2>
   </div>
-  <div class="form_container create_post">
+  <div class="form_container post_form">
     <div class="form_wrapper">
       <%= form_for([ @parent, @post], :validate => true) do |f| %>
         <div class="table_padding">
