--- a/app/views/contact_groups/_form.html.erb
+++ b/app/views/contact_groups/_form.html.erb
@@ -1,25 +1,23 @@
-<%= form_for(@contact_group) do |f| %>
-  <% if @contact_group.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contact_group.errors.count, "error") %> prohibited this contact_group from being saved:</h2>
-
-      <ul>
-      <% @contact_group.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+<div id="form_facebox_ajax">
+  <%= form_for(@contact_group, :remote => true, :validate => true) do |f| %>
+      <div class="facebox_form">
+        <table cellspacing="0" cellpadding="0">
+          <tr>
+            <td class="description"><%= f.label :name, 'Name:' %></td>
+            <td class="entry"><%= f.text_field :name %></td>
+          </tr>
+        </table>
+        <div class="confirmation_container clearfix">
+          <div class="accept clearfix">
+            <div class="important_notice clearfix">
+            </div>
+            <div class="blue_button"><%= f.submit %></div>
+          </div>
+        </div>
+      </div>
   <% end %>
+</div>
 
-  <div class="field">
-    <%#= f.label :user_id %><br />
-    <%#= f.text_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :group_name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+<script>
+    $("#form_facebox_ajax form").validate();
+</script>
