--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,26 +1,21 @@
-<%= form_for @contact, :html => {:class => "semantic left_align"}, :validate => true do |f| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
-
-      <ul>
-        <% @contact.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
+<%= form_for @contact, :remote => true do |f| %>
+  <div class="facebox_form">
+    <table cellspacing="0" cellpadding="0">
+      <tr>
+        <td class="description"><%= f.label :name, 'Name:' %></td>
+        <td class="entry"><%= f.text_field :name %></td>
+      </tr>
+      <tr>
+        <td class="description"><%= f.label :email, 'Email:' %></td>
+        <td class="entry"><%= f.text_field :email %></td>
+      </tr>
+    </table>
+    <div class="confirmation_container clearfix">
+      <div class="accept clearfix">
+        <div class="important_notice clearfix">
+        </div>
+        <div class="blue_button"><%= f.submit "SUBMIT" %></div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-    <%= link_to 'Cancel', contacts_path, :class => "alt" %>
   </div>
 <% end %>
