--- a/app/views/posts/_news_preview.html.erb
+++ b/app/views/posts/_news_preview.html.erb
@@ -1,11 +1,6 @@
-<div class="team-item">
+<li class="team-item">
   <div class="summary">
-    <%= post.summary %>
+    <%= post.title %>
   </div>
-  <div class="item-buttons">
-    <%= link_to(image_tag('content_email_.png'), share_through_email_form_post_path(post), :method => "GET", :class=>"smack", :remote => true) %>
-    <%= render(:partial => "posts/facebook_share", :locals => {:post => post, :image => "content_fb_.png"}) %>
-    <%= render(:partial => "posts/twitter_share", :locals => {:post => post, :image => "content_tw_.png"}) %>
-    <%= link_to_if(current_user.present?, image_tag('send_as_smack_.png', :alt => 'Send as smack'), share_through_email_form_post_path(post, :smack => true), :rel=>"facebox[.bolder]", :class=>"smack", :method => "GET", :remote => true) %>
-  </div>
-</div>
+  <%= share_icons(post, :preview) %>
+</li>
