--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,9 +2,9 @@
   <div class="content_actions">
     <ul>
       <% if can? :report, @post %>
-          <li>
-            <%= link_to('Report Post', report_post_path(@post), :class => 'button postreport', :id => "post_rep_#{@post.id}") %>
-          </li>
+        <li>
+          <%= link_to('Report Post', report_post_path(@post), :class => 'button postreport', :id => "post_rep_#{@post.id}") %>
+        </li>
       <% end %>
     </ul>
   </div>
@@ -19,15 +19,11 @@
           <%= link_to(image_tag('dislike.png'), vote_down_post_path(@post), :method => :post, :remote => true, :class => "vote-down") if can? :create, Vote %>
           <b id="vote_count_down<%= @post.id %>"><%= @post.down_votes %></b>
           <span class="divider_vert">&nbsp;</span>
-          <%= link_to(image_tag('content_email.png'), share_through_email_form_post_path(@post), :method => "GET",:class=>"smack", :remote => true) %>
-          <%= render(:partial => "posts/facebook_share", :locals => {:post => @post, :image => "content_fb.png"}) %>
-          <%= render(:partial => "posts/twitter_share", :locals => {:post => @post, :image => "content_tw.png"}) %>
-          <span class="divider_vert">&nbsp;</span>
-          <%= link_to_if(current_user.present?, image_tag('send_as_smack.png', :alt => 'Send as smack') , share_through_email_form_post_path(@post, :smack => true), :rel=>"facebox[.bolder]",:class=>"smack", :method => "GET", :remote => true) %>
+          <%= share_icons(@post, :show) %>
           <span class="divider_vert">&nbsp;</span>
           <% if signed_in? %>
-              <%= link_to('<img src="/images/edit.png" alt="Edit" />'.html_safe, method("edit_#{@post.postable_type.downcase}_#{@post.type.downcase}_path").call(@post.postable, @post), :class => 'button') if can? :update, @post %>
-              <%= link_to('<img src="/images/delete.png" alt="Delete" />'.html_safe, @post, :method => :delete, :confirm => "Delete Post?", :class => 'button') if can? :destroy, @post %>
+            <%= link_to('<img src="/images/edit.png" alt="Edit" />'.html_safe, method("edit_#{@post.postable_type.downcase}_#{@post.type.downcase}_path").call(@post.postable, @post), :class => 'button') if can? :update, @post %>
+            <%= link_to('<img src="/images/delete.png" alt="Delete" />'.html_safe, @post, :method => :delete, :confirm => "Delete Post?", :class => 'button') if can? :destroy, @post %>
           <% end %>
         </div>
 
@@ -43,47 +39,47 @@
         </div>
 
         <% if @post.photo || @post.news_post || @post.video %>
-            <div class="smack_content">
+          <div class="smack_content">
         <% end %>
         <% if @post.photo %>
-            <div class="photo">
-              <img src="<%= @post.photo.url(:large) %>" alt=""/>
-            </div>
+          <div class="photo">
+            <img src="<%= @post.photo.url(:large) %>" alt=""/>
+          </div>
         <% end %>
         <% if @post.news_post %>
-            <%= link_to "News post", @post.news_post.url %>
-            <% unless @post.news_post.image_file_name.blank? %>
-                <div class="photo">
-                  <img src="<%= @post.news_post.image_url(:large) %>" alt=""/>
-                </div>
-            <% end %>
-            <% unless @post.news_post.video_url.blank? %>
-                <div><%= youtube_embed(@post.news_post.video_url, :large) %></div>
-            <% end %>
+          <%= link_to "News post", @post.news_post.url %>
+          <% unless @post.news_post.image_file_name.blank? %>
+            <div class="photo">
+              <img src="<%= @post.news_post.image_url(:large) %>" alt=""/>
+            </div>
+          <% end %>
+          <% unless @post.news_post.video_url.blank? %>
+            <div><%= youtube_embed(@post.news_post.video_url, :large) %></div>
+          <% end %>
         <% end %>
         <% if @post.video %>
-            <div><%= youtube_embed(@post.video.url, :large) %></div>
+          <div><%= youtube_embed(@post.video.url, :large) %></div>
         <% end %>
         <% if @post.photo || @post.news_post || @post.video %>
-            </div>
+          </div>
         <% end %>
         <div class="summary"><%= @post.summary %>
           <% if @post.summary && params[:action] != 'show' %>
-              <%= link_to " [more...]", [@parent, @post] %>
+            <%= link_to " [more...]", [@parent, @post] %>
           <% end %>
         </div>
         <br class="clear"/>
 
         <div class="content_title2">Comments</div>
         <% if signed_in? %>
-            <div class="add_comment">
-              <%= form_for [@post, Comment.new], :remote => true do |f| %>
-                  <%= render '/shared/comments', :f => f %>
-                  <div>
-                    <%= f.submit "Submit Comment" %>
-                  </div>
-              <% end %>
-            </div>
+          <div class="add_comment">
+            <%= form_for [@post, Comment.new], :remote => true do |f| %>
+              <%= render '/shared/comments', :f => f %>
+              <div>
+                <%= f.submit "Submit Comment" %>
+              </div>
+            <% end %>
+          </div>
         <% end %>
         <%= will_paginate(@comments) %>
         <div class="comments_container">
