--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -1,9 +1,28 @@
-<div class="notification-header">
-  
-</div>
-<div class="notification-body">
-  <p><%=  raw(@message.body) %></p>
-</div>
-<div class="notification-footer">
+<div class="notification-header"></div>
 
+<div class="notification-body">
+  <h1><%= @post.title %> </h1>
+
+  <div class="post">
+    <div class="top">
+      Posted <%= time_ago_in_words(@post.created_at) -%>  ago by <%= @post.user.try(:username) || "Campusmack Team" %>
+      <br class="clear"/>
+    </div>
+    <% if @post.photo %>
+        <%= link_to(@post.title, polymorphic_url([@post.postable, @post])) %>
+        <div class="photo">
+          <img src="<%= @post.photo.url(:large) %>" alt=""/>
+        </div>
+    <% end %>
+    <%= link_to(@post.title, polymorphic_url([@post.postable, @post])) -%>
+    <% if  @post.video %>
+        <a href="<%= @post.video.url %>" style="color:white">.</a>
+    <% end %>
+    <br/>
+    <%= @post.summary %>
+  </div>
+  <br/>
+  <p><%= raw(@message.gsub(/\n/, '<br/>')) %></p>
 </div>
+
+<div class="notification-footer"></div>
