--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -9,24 +9,7 @@
       </div>
       <div class="form_container form_sign_up">
         <div class="form_wrapper">
-          <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :validate => true) do |f| %>
-              <div class="table_padding">
-                <table cellpadding="0" cellspacing="0">
-                  <%= render 'fields', :f => f %>
-                </table>
-              </div>
-              <div class="important_notice clearfix">
-                <span class='required_sign'>*</span>
-                <span class="important_notice_text">Required fields</span>
-              </div>
-              <div class="confirmation_container clearfix">
-                <div class="terms clearfix">
-                  <span class="check_box"><%= f.check_box :terms_of_service %></span><label for="user_terms_of_service"><span class="text">I agree to <%= link_to 'Terms and Conditions of Use', root_url %>
-                  and <%= link_to 'Privacy Police', root_url %></span></label></div>
-
-                <div class="blue_button"><%= f.submit "SIGN UP" %></div>
-              </div>
-          <% end %>
+          <%= render :partial => 'form' %>
         </div>
       </div>
     </div>
