--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -34,7 +34,7 @@
         <a href="#" class="mail"></a>
         <a href="#" class="content_fb"></a>
         <a href="#" class="content_tw"></a>
-        <%= link_to_if(signed_in?, image_tag('send_as_smack_.png', :alt => 'Send as smack', :class=>'read_more') , share_through_email_form_post_path(@sotw, :smack => true), :rel=>"facebox[.bolder]",:class=>"smack", :method => "GET", :remote => true) %>
+        <%= send_as_smack_btn(@sotw, :style => 'float: left; margin-left: 104px;') %>
       </div>
     </div>
   </div>
