--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="form_container post_form">
     <div class="form_wrapper">
-      <%= form_for([ @parent, @post], :validate => true) do |f| %>
+      <%= form_for([ @parent, @post], :validate => true, :html => { :multipart => true }) do |f| %>
         <div class="table_padding">
           <table cellpadding="0" cellspacing="0">
             <tr>
